Commiting the whole NezamInteractions Test Automation Project